# 2D-Engine

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Include/: Game.hpp  Object.hpp  Scene.hpp  Things.hpp  Window.hpp
Engine/Include/GameElements/: Scene.hpp
Engine/Include/GameElements/LevelElements/: GameObject.hpp
Engine/Include/General/: Object.hpp  Things.hpp  Window.hpp
Engine/Source/: Game.cpp  Object.cpp  Scene.cpp  Window.cpp
Engine/Source/GameElements/: Scene.cpp
Engine/Source/General/: Object.cpp  Window.cpp
Samples/Window/: CMakeLists.txt  SampleWindow.cpp
